# rigit

./: Cargo.toml  README.md
.github/workflows/: check.yml  ntfy.yml  test.yml
src/: main.rs
src/commands/: cli.rs  fetch.rs  mod.rs  status.rs
src/util/: repos.rs
tests/: status_tests.rs
