[package]
name = "rigit"
authors = ["Væñgír"]
version = "0.2.0"
description = "Cli-tool which lets you perform a git action on multiple repositories."
edition = "2021"
rust-version = "1.74" # MSRV because of clap
repository = "https://github.com/Vaengir-Projects/rigit.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["cargo"] }
clap_complete = "4.5.1"
colored = "3.0.0"
